# Hackathon_Todo_App

Phase2_Web/: .gitignore  README.md  railway.toml
Phase2_Web/backend/: .env  main.py  requirements.txt  start.sh
Phase2_Web/backend/api/: deps.py
Phase2_Web/backend/api/endpoints/: auth.py  tasks.py
Phase2_Web/backend/core/: config.py  security.py
Phase2_Web/backend/crud/: user.py
Phase2_Web/backend/models/: __init__.py  task.py  user.py
Phase2_Web/backend/schemas/: task.py  user.py
Phase2_Web/backend/services/: task_service.py
Phase2_Web/frontend/: package-lock.json  package.json
Phase2_Web/frontend/app/auth/signin/: page.tsx
Phase2_Web/frontend/app/auth/signup/: page.tsx
Phase2_Web/frontend/app/dashboard/: page.tsx
Phase2_Web/frontend/lib/: api.ts  auth.ts  types.ts
Phase2_Web/specs/: architecture.md  overview.md
Phase2_Web/specs/api/: rest-endpoints.md
Phase2_Web/specs/features/: authentication.md  task-crud.md
Phase2_Web/specs/ui/: components.md
todo-phase1/: CLAUDE.md  README.md  main.py  pyproject.toml  speckit.constitution  speckit.plan  speckit.specify  speckit.tasks
todo-phase1/.claude/: settings.local.json
todo-phase1/src/hackathon_todo/: __init__.py  main.py  todo_manager.py  ui.py
