[project]
name = "hackathon-todo"
version = "0.1.0"
description = "Phase I - Console-based Todo Manager Application"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
todo = "hackathon_todo.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
